[project]
name = "bankiru-dbapi"
version = "0.1.0"
description = "Banki.ru Claims and Negative Reviews Database API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiobotocore>=2.24.0",
    "alembic>=1.16.4",
    "environs>=14.3.0",
    "fastapi[standard]>=0.116.1",
    "logfire[fastapi]>=4.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "psycopg[binary,pool]>=3.2.9",
    "pyarrow>=21.0.0",
    "pydantic-ai>=1.14.1",
    "sqlalchemy>=2.0.43",
]
